--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
         <p>I will do more with this later, but for now:</p>
 
 <p>I'm setting up a fork of Clay Soldiers, to add some stuff to.
-I will take this down if requested by SanAndreasP, I just thought that it seemed like it needed some work.</p>
+I will add a fixed-feature list later, and possibly some videos n' such.
+  
+In the meantime, head to my main site (can be accessed from my profile page), and look at my other projects or donate some Dogecoin!
+</p>
       </section>
 
     </div>
