New loots on the front page
Some pictures, like in normal CSM.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@ I will add a fixed-feature list later, and possibly some videos n' such.
   
 In the meantime, head to my main site (can be accessed from my profile page), and look at my other projects or donate some Dogecoin!
 </p>
+
+	<h2>Some info</h2>
+	<img src="images/stick.png" />
+	<img src="images/leather.png" />
+	<img src="images/padding.png" />
+	<img src="images/shield.png" />
+	<img src="images/horses.png" />
+	<img src="images/eggs.png" />
+	<img src="images/shears.png" />
+	<img src="images/blazerod.png" />
+	<img src="images/assasin.png" />
+	<img src="images/glow.png" />
+	<img src="images/finish.png" />
       </section>
 
     </div>
