Precompiled download stuff, easy to install!
No need to compile with the MCP now, phew.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
           <li class="fork"><a href="https://github.com/CliffracerX/ClaySoldiersMod">View On GitHub</a></li>
           <li class="downloads"><a href="https://github.com/CliffracerX/ClaySoldiersMod/zipball/master">ZIP</a></li>
           <li class="downloads"><a href="https://github.com/CliffracerX/ClaySoldiersMod/tarball/master">TAR</a></li>
+		  <li class="downloads"><a href="cliffracerx.github.io/ClaySoldiersMod/CliffracerX_CSM_v1_0.jar">Download fork of CSM</a></li>
+		  <li class="downloads"><a href="https://github.com/SanAndreasP/SAP_Downloads/blob/master/Manager%20Pack/SAP_ManPackCore_v200a.jar">Download the manager pack</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
@@ -47,17 +49,23 @@ In the meantime, head to my main site (can be accessed from my profile page), an
 </p>
 
 	<h2>Some info</h2>
-	<img src="images/stick.png" />
-	<img src="images/leather.png" />
-	<img src="images/padding.png" />
-	<img src="images/shield.png" />
-	<img src="images/horses.png" />
-	<img src="images/eggs.png" />
-	<img src="images/shears.png" />
-	<img src="images/blazerod.png" />
-	<img src="images/assasin.png" />
-	<img src="images/glow.png" />
-	<img src="images/finish.png" />
+	<img src="images/stick.png" /><br>
+	<img src="images/leather.png" /><br>
+	<img src="images/padding.png" /><br>
+	<img src="images/shield.png" /><br>
+	<img src="images/horses.png" /><br>
+	<img src="images/eggs.png" /><br>
+	<img src="images/shears.png" /><br>
+	<img src="images/blazerod.png" /><br>
+	<img src="images/assasin.png" /><br>
+	<img src="images/glow.png" /><br>
+	<img src="images/finish.png" /><br>
+	
+	<h2>Install info</h2>
+	To install the mod for use on a client, simply download the fork from the button above, as well as the manager.
+	Insert both into your mods folder and you should be good to go!  For forge 1.6.4.
+	
+	To install the mod to mod it (Hurr durr), you need to get the right version of the manager pack's SRC (the one before ForgeGradle's update), and the sourcecode for my fork of CSM off github.  Put the assets/sanandreasp folder from CSM into mcp/src/minecraft, and follow the install instructions from SapManPack.
       </section>
 
     </div>
