--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li class="fork"><a href="https://github.com/CliffracerX/ClaySoldiersMod">View On GitHub</a></li>
           <li class="downloads"><a href="https://github.com/CliffracerX/ClaySoldiersMod/zipball/master">ZIP</a></li>
           <li class="downloads"><a href="https://github.com/CliffracerX/ClaySoldiersMod/tarball/master">TAR</a></li>
-		  <li class="downloads"><a href="/CliffracerX_CSM_v1_0.jar">Download fork of CSM</a></li>
+		  <li class="downloads"><a href="http://cliffracerx.github.io/ClaySoldiersMod/CliffracerX_CSM_v1_0.jar">Download fork of CSM</a></li>
 		  <li class="downloads"><a href="https://github.com/SanAndreasP/SAP_Downloads/blob/master/Manager%20Pack/SAP_ManPackCore_v200a.jar">Download the manager pack</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
