Bah?!  I'm not good with HTML.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li class="downloads"><a href="https://github.com/CliffracerX/ClaySoldiersMod/tarball/master">TAR</a></li>
 		  <li class="downloads"><a href="http://cliffracerx.github.io/ClaySoldiersMod/CliffracerX_CSM_v1_0.jar">DL my CSM</a></li>
 		  <li class="downloads"><a href="https://github.com/SanAndreasP/SAP_Downloads/raw/master/Manager%20Pack/SAP_ManPackCore_v200a.jar">DL manager pack</a></li>
-		  <li class="mainSite"><a href="https://cliffracerx.github.io">Main_Site</a></li>
+		  <li class="mainSite"><a href="cliffracerx.github.io">Main_Site</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
