--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li class="downloads"><a href="https://github.com/CliffracerX/ClaySoldiersMod/tarball/master">TAR</a></li>
 		  <li class="downloads"><a href="https://github.com/CliffracerX/ClaySoldiersMod/releases/download/a1.01/CliffracerX_CSM_v1_0.jar">DL my CSM</a></li>
 		  <li class="downloads"><a href="https://github.com/SanAndreasP/SAP_Downloads/raw/master/Manager%20Pack/SAP_ManPackCore_v200a.jar">DL manager pack</a></li>
-		  <li class="mainSite"><a href="http://cliffracerx.github.io">Main_Site</a></li>
+		  <li class="mainSite"><a href="http://cliffracerx.github.io">Main Site</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
@@ -63,6 +63,10 @@ In the meantime, head to my main site (can be accessed from my profile page), an
 	<img src="images/finish.png" /><br>
 	
 	<h2>Install info</h2>
+	Easy:
+	Simply add the technic modpack I made for this AND my decoration mod to your technic launcher.
+	<li class="downloads"><a href="http://www.technicpack.net/modpack/details/cliffies-claycastlestorm-pack.271850">Technic Pack</a></li>
+	Manual:
 	To install the mod for use on a client, simply download the fork from the button above, as well as the manager.
 	Insert both into your mods folder and you should be good to go!  For forge 1.6.4.
 	
