--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ In the meantime, head to my main site (can be accessed from my profile page), an
 	
 	To install the mod to mod it (Hurr durr), you need to get the right version of the manager pack's SRC (the one before ForgeGradle's update), and the sourcecode for my fork of CSM off github.  Put the assets/sanandreasp folder from CSM into mcp/src/minecraft, and follow the install instructions from SapManPack.
       </section>
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
